[tool.poetry]
name = "pytorch-playground"
version = "0.1.0"
description = ""
authors = ["Alexandre Maros <alehstk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jupyterlab = "^4.1.8"
notebook = "^7.1.3"
pandas = "^2.2.2"
pyspark = "^3.5.1"
black = {extras = ["jupyter"], version = "^24.4.2"}
fastparquet = "^2024.5.0"
tqdm = "^4.66.4"
tensorboard = "^2.16.2"
scikit-learn = "^1.5.0"
torch = {version = "^2.3.0+cu121", source = "pytorch_gpu121"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch_gpu121"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_gpu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
